fixed hover pics on mobile

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -346,7 +346,7 @@ body {
         }
       }
       .vertical-wrapper {
-        position: static;
+        position: relative;
         top: auto;
         left: auto;
         transform: none;
